Fix dependencies and dark mode

--- a/packages/metadata-common/style/index.css
+++ b/packages/metadata-common/style/index.css
@@ -92,6 +92,11 @@
   width: 100%;
 }
 
+.elyra-metadataEditor-dark.elyra-metadataEditor .MuiButtonBase-root {
+  color: #fff;
+  border-color: #fff;
+}
+
 .elyra-form-DropDown-item {
   width: 100%;
   display: flex;
